--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -10,6 +10,7 @@ cryptography==44.0.2
 distro==1.9.0
 Flask==3.1.0
 flask-cors==5.0.1
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -20,6 +21,7 @@ jiter==0.9.0
 lxml==5.3.2
 MarkupSafe==3.0.2
 openai==1.72.0
+packaging==24.2
 pdfminer.six==20250327
 pdfplumber==0.11.6
 pillow==11.1.0
