--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -15,6 +15,7 @@ h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.9.0
@@ -25,10 +26,12 @@ packaging==24.2
 pdfminer.six==20250327
 pdfplumber==0.11.6
 pillow==11.1.0
+pluggy==1.5.0
 pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
 pypdfium2==4.30.1
+pytest==8.3.5
 python-docx==1.1.2
 python-dotenv==1.1.0
 sniffio==1.3.1
